# crypto-market-neutral-platform

./: .env.example  .gitignore  README.md  RESTRUCTURE_NOTES.md  config.py  exit.py  exit_state.json  main.py  pyproject.toml  run.sh  smart_kimchi_state.json
docs/: process.md
legacy-imports/contango-hunter/: .env.example  .gitignore  README.md  contango_auto_trader.py  contango_monitor.py  contango_trade_executor.py  price_fetcher.py  requirements.txt
src/: __init__.py  constants.py  exchanges.py  exit_manager.py  kimchi_exit_manager.py  kimchi_premium.py  korean_exchanges.py  position_tracker.py  pricing.py  smart_kimchi_exit.py  trading.py  utils.py
src/overseas_exchange_hedge/: __init__.py  __main__.py  cli.py  config.py
src/overseas_exchange_hedge/common/: __init__.py  constants.py  logging_utils.py  paths.py  utils.py
src/overseas_exchange_hedge/korea/: __init__.py
src/overseas_exchange_hedge/korea/exit/: __init__.py  app.py  kimchi_premium.py  korean_exchanges.py
src/overseas_exchange_hedge/korea/redflag/: __init__.py  app.py
src/overseas_exchange_hedge/korea/redflag/config/: settings.py
src/overseas_exchange_hedge/korea/redflag/core/: __init__.py  hedge_bot.py  order_executor.py  premium_calculator.py
src/overseas_exchange_hedge/korea/redflag/exchanges/: __init__.py  bithumb.py  bybit.py  gateio.py  upbit.py
src/overseas_exchange_hedge/korea/redflag/managers/: __init__.py  position_manager.py  timer_manager.py
src/overseas_exchange_hedge/korea/redflag/utils/: __init__.py  logger.py
src/overseas_exchange_hedge/overseas/: __init__.py  app.py  exchange_manager.py  position_tracker.py  price_analyzer.py  trade_executor.py
tests/: conftest.py  test_cli_smoke.py  test_common_paths.py  test_common_utils.py  test_cross_exchange.py  test_initialization.py  test_korea_exit_kimchi_premium.py  test_korea_exit_kimchi_premium_calc.py  test_korea_redflag_premium_calculator.py  test_korea_redflag_timer_manager.py  test_manual.py  test_minimums.py  test_overseas_exchange_manager_parsing.py  test_overseas_exchange_manager_utils.py  test_overseas_position_tracker.py  test_overseas_price_analyzer.py  test_overseas_trade_executor_helpers.py  test_prices.py
