[project]
name = "hedge-bot"
version = "1.0.0"
description = "Multi-exchange delta-neutral hedge bot"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.0.0",
    "gate-api>=6.104.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
hedge = "overseas_exchange_hedge.cli:main"
hedge-exit = "overseas_exchange_hedge.korea.exit.app:main"
hedge-redflag = "overseas_exchange_hedge.korea.redflag.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overseas_exchange_hedge"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "types-requests>=2.31.0.20240914",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]
extend-exclude = ["runtime"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = ["src"]
exclude = "(^runtime/)"
